# echolung

./: .gitignore  README.md  pyproject.toml
configs/4090/eval/: echonet_dynamic_lvef.yaml  echonet_pediatric_lvef.yaml
configs/4090/inference/: echonet_dynamic_lvef.yaml  echonet_pediatric_lvef.yaml
configs/4090/train/: cooldown-mimic-224px-16f.yaml  pretrain-echonet-224px-16f.yaml  pretrain-mimic-224px-16f.yaml
configs/pocus/: covid_blues_binary_cv.yaml  covid_blues_binary_cv_randinit.yaml  covid_blues_binary_test.yaml  covid_blues_classification.yaml  covid_blues_severity.yaml  covid_blues_severity_test.yaml  pocus_classification.yaml  pocus_cv.yaml  pocus_cv_randinit.yaml  pocus_test.yaml
data/: prepare_covid_blues.py  prepare_echonet_dynamic.py  prepare_echonet_pediatric.py  prepare_pocus.py  prepare_pretrain_combined.py
docs/: blog.md
evals/video_classification_frozen/: eval.py
evals/video_classification_frozen/modelcustom/: vit_encoder_multiclip_randinit.py
results/: covid_blues_binary_test_predictions.csv  covid_blues_cv_randinit_summary.json  covid_blues_cv_summary.json  covid_blues_severity_test_predictions.csv  cv_metrics.json  paper_results.json  pocus_cv_randinit_summary.json  pocus_cv_summary.json  pocus_test_predictions.csv  test_summary.json
scripts/: aggregate_cv.py  evaluate_metrics.py  evaluate_test.py  generate_paper_figures.py  plot_confusion_matrices.py  plot_results.py  run_covid_blues_cv.sh  run_covid_blues_cv_randinit.sh  run_full_eval.sh  run_pocus_cv.sh  run_pocus_cv_randinit.sh
(+20 files in other folders)
