[project]
name = "echolung"
version = "0.1.0"
description = "Cross-anatomy transfer: cardiac echo SSL → few-shot lung ultrasound classification"
requires-python = ">=3.11"
dependencies = [
    "torch>=2",
    "torchvision",
    "tensorboard",
    "wandb",
    "iopath",
    "pyyaml",
    "numpy",
    "opencv-python",
    "submitit",
    "braceexpand",
    "webdataset",
    "timm",
    "transformers",
    "peft",
    "decord",
    "pandas",
    "einops",
    "beartype",
    "psutil",
    "h5py",
    "fire",
    "python-box",
    "scikit-image",
    "ftfy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "tqdm",
    "monai",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "isort", "jupyter"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "app", "evals"]

[tool.isort]
profile = "black"
line_length = 119

[tool.black]
line-length = 119
